internal/xds/translator/testdata/out/extension-xds-ir/http-route-custom-backend-weighted.routes.yaml
- ignorePortInHostMatching: true
  name: custom-backend-weighted-listener
  virtualHosts:
  - domains:
    - '*'
    name: custom-backend-weighted-listener/*
    routes:
    - match:
        prefix: /
      name: httproute/default/httproute-1/rule/0/match/0/*
      responseHeadersToAdd:
      - header:
          key: mock-extension-was-here-route-name
          value: httproute/default/httproute-1/rule/0/match/0/*
      - header:
          key: mock-extension-was-here-route-hostnames
          value: '*'
      - header:
          key: mock-extension-was-here-extensionRef-name
          value: inference-pool-0
      - header:
          key: mock-extension-was-here-extensionRef-namespace
      - header:
          key: mock-extension-was-here-extensionRef-kind
          value: InferencePool
      - header:
          key: mock-extension-was-here-extensionRef-apiversion
          value: inference.networking.x-k8s.io/v1alpha2
      - header:
          key: mock-extension-was-here-route-name
          value: httproute/default/httproute-1/rule/0/match/0/*
      - header:
          key: mock-extension-was-here-route-hostnames
          value: '*'
      - header:
          key: mock-extension-was-here-extensionRef-name
          value: inference-pool-1
      - header:
          key: mock-extension-was-here-extensionRef-namespace
      - header:
          key: mock-extension-was-here-extensionRef-kind
          value: InferencePool
      - header:
          key: mock-extension-was-here-extensionRef-apiversion
          value: inference.networking.x-k8s.io/v1alpha2
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: httproute/default/httproute-1/rule/0/backend/0
            weight: 8
          - name: httproute/default/httproute-1/rule/0/backend/1
            weight: 2
